spec/lib/cli/log/errors/noCodeFolder.js
// Generated by CoffeeScript 2.4.1
(function() {
  'use strict';
  module.exports = function(dd) {
    return dd.drive([
      {
        it: 'returns `noCodeFolder` error message',
        i: ['code'],
        e: `Specified code folder ${dd.helper.c.bright('code')} does not exist.`
      }
    ]);
  };

}).call(this);
